# hakaton

./: .gitignore  README.md  dockerfile  manage.py  pyproject.toml
Aviahome/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_profile_phone.py  0003_profile_is_moderator_alter_profile_user.py
accounts/templates/: base.html  forgot_password.html  login.html  main_page.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html  signup_moderator.html
tickets/: forms.py  models.py  urls.py  utils.py  views.py
tickets/migrations/: 0001_initial.py
tickets/templates/: decode_pnr.html  decoded_pnr.html
tort/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tort/management/commands/: import_air.py  import_company.py
tort/migrations/: 0001_initial.py  0002_delete_city_alter_airport_name.py  0003_company.py
tort/scripts/: air_list.csv  company_list.csv
